solved layout bug in table project_category page

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -338,3 +338,8 @@ th{
 #myTable_wrapper{
     margin: auto
 }
+
+table.fixed {table-layout:fixed; width:100%;}/*Setting the table width is important!*/
+table.fixed td {overflow:hidden;}/*Hide text outside the cell.*/
+table.fixed td:nth-of-type(1) {width:10%;}/*Setting the width of column 1.*/
+table.fixed td:nth-of-type(2) {width:90%;}/*Setting the width of column 2.*/
